# dspy_article_2

./: .env.example  .gitignore  README.md  Taskfile.yml  proj.yaml  pyproject.toml  requirements.txt
.yamlproject/: config.yaml
src/: __init__.py  basic_examples.py  config.py  main.py  optimization.py  pipelines.py  structured_outputs.py
tests/: __init__.py  test_modules.py
